--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,12 @@ dependencies {
     implementation project(path: ':xvideoplayer')
     implementation project(path: ':xvideoplayer-controller-tx')
 
+    //api rootProject.ext.androidxs
+    api rootProject.ext.mvvms
+    //api rootProject.ext.bdas
+    //api rootProject.ext.bdcas
+    api rootProject.ext.bdcltas
+
     implementation rootProject.ext.dependencies.glide
     implementation 'androidx.annotation:annotation:1.2.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
@@ -50,6 +56,9 @@ dependencies {
 
     //# required, enough for most devices.
     implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
+
+    //androidx
+    implementation 'com.github.qintangtao:xrecyclerview:1.0.2'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
